--- a/hoa-frontend/src/app/landing-page/landing-page.component.html
+++ b/hoa-frontend/src/app/landing-page/landing-page.component.html
@@ -1,8 +1,9 @@
-<section *ngIf="!signedIn.userIsSignedIn" class="landing">
-  <svg width="100" height="100">
-    <use xlink:href="hoa.svg"></use>
-  </svg>
-  <h1>Welcome to the Homeowners Association</h1>
-  <p>Your trusted community hub</p>
-  <app-auth></app-auth>
-</section>
+<div ngClass="parent-section" *ngIf="!signedIn.userIsSignedIn" class="landing">
+  <div class="lp-header"></div>
+  <div class="centered-content">
+    <img src="/Users/johnearlbascos/Downloads/hoa.png" />
+    <h1 class="lp-title">Welcome to HOA Hub</h1>
+    <p class="lp-subtitle">Your trusted community hub</p>
+    <app-auth></app-auth>
+  </div>
+</div>
