implement logout and add the user profile component

--- a/hoa-frontend/src/app/homepage/homepage.component.html
+++ b/hoa-frontend/src/app/homepage/homepage.component.html
@@ -1,3 +1,7 @@
-<section *ngIf="signedIn.userIsSignedIn">
-  <div></div>
-</section>
+<div class="home-page app-style">
+  <div class="link-list-section">
+    sfafdasdf
+    <app-user class="user-profile"></app-user>
+  </div>
+  <section></section>
+</div>
