--- a/hoa-frontend/src/app/landing-page/landing-page.component.html
+++ b/hoa-frontend/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,8 @@
-<div ngClass="parent-section" *ngIf="!signedIn.userIsSignedIn" class="landing">
+<div
+  ngClass="parent-section app-style"
+  *ngIf="!signedIn.userIsSignedIn"
+  class="landing"
+>
   <div class="lp-header"></div>
   <div class="centered-content">
     <img src="/Users/johnearlbascos/Downloads/hoa.png" />
