--- a/hoa-frontend/src/app/homepage/homepage.component.html
+++ b/hoa-frontend/src/app/homepage/homepage.component.html
@@ -1,7 +1,8 @@
 <div class="home-page app-style">
   <div class="link-list-section">
-    sfafdasdf
-    <app-user class="user-profile"></app-user>
+    <div></div>
+    <div>
+      <app-user class="user-profile"></app-user>
+    </div>
   </div>
-  <section></section>
 </div>
