--- a/hoa-frontend/src/styles.css
+++ b/hoa-frontend/src/styles.css
@@ -119,3 +119,22 @@ body {
 .center-content {
   text-align: center;
 }
+.left-content {
+  display: flex;
+  align-items: center; /* Center vertically within the flex container */
+}
+
+.user-profile-ps {
+  display: flex;
+  justify-content: space-between;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+.profile-settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 700px;
+  height: 600px;
+}
