--- a/hoa-frontend/src/app/landing-page/landing-page.component.html
+++ b/hoa-frontend/src/app/landing-page/landing-page.component.html
@@ -1,11 +1,7 @@
-<div
-  ngClass="parent-section app-style"
-  *ngIf="!signedIn.userIsSignedIn"
-  class="landing"
->
+<div ngClass="parent-section app-style" class="landing">
   <div class="lp-header"></div>
   <div class="centered-content">
-    <img src="/Users/johnearlbascos/Downloads/hoa.png" />
+    <img src="hoa.png" />
     <h1 class="lp-title">Welcome to HOA Hub</h1>
     <p class="lp-subtitle">Your trusted community hub</p>
     <app-auth></app-auth>
