--- a/hoa-frontend/src/styles.css
+++ b/hoa-frontend/src/styles.css
@@ -119,22 +119,40 @@ body {
 .center-content {
   text-align: center;
 }
-.left-content {
-  display: flex;
-  align-items: center; /* Center vertically within the flex container */
-}
 
-.user-profile-ps {
+.user-profile {
   display: flex;
   justify-content: space-between;
-  font-size: 25px;
+  width: 100%;
   margin-bottom: 10px;
 }
-.profile-settings {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 700px;
-  height: 600px;
+
+.user-profile-ps,
+.right-content {
+  display: flex; /* Apply flexbox to both child divs */
+  align-items: center; /* Vertically align content */
+  margin-right: 5px;
+  font-size: 25px;
+}
+
+.right-content mat-icon:first-child {
+  margin-right: 10px;
+}
+.editable-paragraph input {
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  font-size: inherit;
+  font-family: inherit;
+  background: none;
+  width: 100%;
+}
+.form-group {
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+.ticket-submit {
+  text-align: center;
+  flex-grow: 1;
 }
