--- a/hoa-frontend/src/app/home/home.component.html
+++ b/hoa-frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="flex-container">
   <div class="app-homepage">
-    <app-homepage class="flex-item app-homepage"></app-homepage>
+    <app-homepage class="flex-item"></app-homepage>
   </div>
   <div class="router-outlet">
-    <router-outlet class="flex-item router-outlet"></router-outlet>
+    <router-outlet class="flex-item"></router-outlet>
   </div>
 </div>
