--- a/hoa-frontend/src/app/homepage/tickets/create-ticket-dialog/create-ticket-dialog.component.html
+++ b/hoa-frontend/src/app/homepage/tickets/create-ticket-dialog/create-ticket-dialog.component.html
@@ -32,6 +32,7 @@
             font-family: Arial, sans-serif;
             font-size: 15px;
             border-radius: 7px;
+            background-color: #c3b494;
           "
         >
           Create ticket
