--- a/hoa-frontend/src/app/landing-page/landing-page.component.html
+++ b/hoa-frontend/src/app/landing-page/landing-page.component.html
@@ -1,9 +1,12 @@
 <div ngClass="parent-section app-style" class="landing">
   <div class="lp-header"></div>
   <div class="centered-content">
-    <img src="hoa.png" />
+    <img
+      src="./assets/images/hoa.png"
+      style="margin-bottom: 50px; margin-right: 100px"
+    />
     <h1 class="lp-title">Welcome to HOA Hub</h1>
     <p class="lp-subtitle">Your trusted community hub</p>
-    <app-auth></app-auth>
+    <app-auth style="margin-left: 100px"></app-auth>
   </div>
 </div>
