--- a/hoa-frontend/src/app/homepage/homepage.component.css
+++ b/hoa-frontend/src/app/homepage/homepage.component.css
@@ -2,13 +2,32 @@
 .home-page {
   height: 100%;
 }
+.home-page-header {
+  border-bottom: 3px solid black;
+  width: 100%;
+  height: 7rem;
+  display: flex;
+}
+.landing-page-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center vertically */
+  align-items: center; /* Center horizontally */
+  margin-left: 7rem;
+}
 
 /* Keep the existing styles for .link-list-section */
 .link-list-section {
   display: flex;
   flex-direction: column; /* Change to a column layout */
   justify-content: space-between;
-  border: 3px solid black; /* Retain the border */
+  border-top: 3px solid black; /* Retain the border */
+  border-bottom: 3px solid black;
+  border-left: 3px solid black;
+}
+.list-section {
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 /* Style the navigation menu */
