feat(admin: can access all tickets created and change their status, also add the Invoice model)

--- a/hoa-frontend/src/app/homepage/tickets/tickets.component.css
+++ b/hoa-frontend/src/app/homepage/tickets/tickets.component.css
@@ -72,3 +72,6 @@
   font-size: 14px; /* Adjust the font size as needed */
   color: #333; /* Adjust the color as needed */
 }
+.custom-card .ticket-creator {
+  text-align: center;
+}
