implement invoice feature

--- a/hoa-frontend/src/app/homepage/homepage.component.html
+++ b/hoa-frontend/src/app/homepage/homepage.component.html
@@ -30,7 +30,7 @@
       </div>
       <div>
         <li>
-          <a [routerLink]="['/tickets']" routerLinkActive="active">Bills</a>
+          <a [routerLink]="['/home/bills']" routerLinkActive="active">Bills</a>
         </li>
       </div>
       <div>
