--- a/hoa-frontend/src/app/homepage/dashboard/dashboard/dashboard.component.html
+++ b/hoa-frontend/src/app/homepage/dashboard/dashboard/dashboard.component.html
@@ -1,10 +1,18 @@
 <div class="app-style dashboard app-border">
   <div class="dashboard-content flex-center app-style">
     <div class="dashboard-box">
-      You have
-      <a [routerLink]="['/home/tickets']"
-        >{{ pendingTickets?.length }} pending tickets</a
-      >
+      <p>
+        You have
+        <a [routerLink]="['/home/tickets']"
+          >{{ pendingTickets?.length }} pending tickets</a
+        >
+      </p>
+      <p>
+        You have
+        <a [routerLink]="['/home/bills']"
+          >{{ invoices?.length }} unpaid invoices</a
+        >
+      </p>
     </div>
   </div>
   <div></div>
