implement pay invoice

--- a/hoa-frontend/src/app/homepage/invoice/invoice.component.html
+++ b/hoa-frontend/src/app/homepage/invoice/invoice.component.html
@@ -43,9 +43,11 @@
           >
             Pay
           </button>
-          <p *ngIf="invoice.paid" style="color: red; text-align: right">PAID</p>
-          <p *ngIf="!invoice.paid" style="color: red; text-align: right">
+          <p *ngIf="invoice.paid" style="color: black; text-align: right">
             PAID
+          </p>
+          <p *ngIf="!invoice.paid" style="color: red; text-align: right">
+            NOT PAID
           </p>
           <div #cardElement id="card"></div>
         </mat-card-content>
