--- a/hoa-frontend/src/app/homepage/homepage.component.html
+++ b/hoa-frontend/src/app/homepage/homepage.component.html
@@ -29,7 +29,7 @@
         </a>
       </li>
       <li>
-        <a [routerLink]="['/tickets']" routerLinkActive="active">
+        <a [routerLink]="['/home/market']" routerLinkActive="active">
           <mat-icon>store</mat-icon> Community Market
         </a>
       </li>
